--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,58 @@
-.App {
-  text-align: center;
+body {
+    background-color: rgb(135, 135, 255)
+}
+.counter {
+    font-weight: 700;
+    font-size: 25px;
+    border: 3px solid #ffa900;
+    width: 400px;
+    height: 250px;
+    text-align: center;
+    margin: 10% auto;
+    border-radius: 10px;
+    padding-top: 25px;
+    background-color: rgb(135, 135, 255);
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.red_counter {
+    color: red;
+    font-weight: 700;
+    font-size: 50px;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.default_counter {
+    font-weight: 700;
+    font-size: 50px;
+    color: white;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+.button {
+    border: none;
+    border-radius: 5px;
+    font-size: 50px;
+    color: black;
+    transition: 1s ease-in-out;
 }
 
-.App-link {
-  color: #61dafb;
+
+.btn_container {
+    margin-top: 40px;
+    display: inline-flex;
+    border: 3px solid #ffa900;
+    border-radius: 10px;
+    padding: 10px;
+    gap: 10px;
+    background-color: rgb(135, 135, 255);
+
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.button.active {
+   background-color: #94ef18;
+    transform: translate(-2px, -2px);
 }
+
+.button.disabled {
+    background-color: red;
+    opacity: 0.5;
+}
+
